--- a/index.html
+++ b/index.html
@@ -44,31 +44,31 @@
 			<div class="collapse navbar-collapse" id="ftco-nav">
 				<ul class="navbar-nav nav ml-auto">
 					<li class="nav-item">
-						<a href="https://sonusourav.github.io/index.html#home-section" class="nav-link"><span
+						<a href="https://hardeep0598.github.io/index.html#home-section" class="nav-link"><span
 								class="turn-white">Home</span></a>
 					</li>
 					<li class="nav-item">
-						<a href="https://sonusourav.github.io/index.html#about-section" class="nav-link"><span
+						<a href="https://hardeep0598.github.io/index.html#about-section" class="nav-link"><span
 								class="turn-white">About</span></a>
 					</li>
 					<li class="nav-item">
-						<a href="https://sonusourav.github.io/index.html#skills-section" class="nav-link"><span
+						<a href="https://hardeep0598.github.io/index.html#skills-section" class="nav-link"><span
 								class="turn-white">Skills</span></a>
 					</li>
 					<li class="nav-item">
-						<a href="https://sonusourav.github.io/index.html#timeline-section" class="nav-link"><span
+						<a href="https://hardeep0598.github.io/index.html#timeline-section" class="nav-link"><span
 								class="turn-white">Timeline</span></a>
 					</li>
 					<li class="nav-item">
-						<a href="https://sonusourav.github.io/index.html#projects-section" class="nav-link"><span
+						<a href="https://hardeep0598.github.io/index.html#projects-section" class="nav-link"><span
 								class="turn-white">Projects</span></a>
 					</li>
 					<li class="nav-item">
-						<a href="https://sonusourav.github.io/index.html#blog-section" class="nav-link"><span
+						<a href="https://hardeep0598.github.io/index.html#blog-section" class="nav-link"><span
 								class="turn-white">Blog</span></a>
 					</li>
 					<li class="nav-item">
-						<a href="https://sonusourav.github.io/index.html#contact-section" class="nav-link"><span
+						<a href="https://hardeep0598.github.io/index.html#contact-section" class="nav-link"><span
 								class="turn-white">Contact</span></a>
 					</li>
 				</ul>
@@ -103,7 +103,7 @@
 								</h1>
 								<h2 class="mb-4"></h2>
 								<p>
-									<a href="resume_sonusourav.pdf" class="btn-custom">Download CV</a>
+									<a href="resume.pdf" class="btn-custom">Download CV</a>
 								</p>
 							</div>
 						</div>
@@ -124,7 +124,7 @@
 							<div class="text">
 								<h1 class="mb-4 mt-3">I'm an <span>App Developer</span></h1>
 								<p>
-									<a href="resume_sonusourav.pdf" class="btn-custom">Download CV</a>
+									<a href="resume.pdf" class="btn-custom">Download CV</a>
 								</p>
 							</div>
 						</div>
@@ -151,10 +151,16 @@
 								About Me
 							</h2>
 							<p>
-								I am an undergraduate student at IIT Dharwad doing major in
-								Electrical Engineering. I am passionate about contributing to
-								developer community and is associated with many community
-								developer programs.
+                                I am a third year undergraduate at the Rungta College of Engineering & Technology,
+                                pursuing my Bachelors in Computer Science and Engineering.
+                             As a student of Computer Science, I am fascinated by the extensive impact 
+                             computers can have in solving real world problems.
+                              I am specially interested in the fields of software development and data science,
+                               among other areas of computer science and engineering.
+                             Among my other interests, I am fascinated by 
+                             Astronomy as well as Indian history and mythology.
+                               sketching,dancing and reading as hobbies.
+
 							</p>
 							<span class="subheading">Life Philosophy</span>
 							<h5 class="test" data-hover="I shall either find a way or make one"
@@ -206,7 +212,7 @@
 			<div class="row">
 				<div class="col-md-6 animate-box">
 					<div class="progress-wrap ftco-animate">
-						<h3>Kotlin</h3>
+						<h3>Java</h3>
 						<div class="progress">
 							<div class="progress-bar color-1" role="progressbar" aria-valuenow="80" aria-valuemin="0"
 								aria-valuemax="100" style="width:75%">
@@ -217,9 +223,9 @@
 				</div>
 				<div class="col-md-6 animate-box">
 					<div class="progress-wrap ftco-animate">
-						<h3>Android</h3>
+						<h3>Python</h3>
 						<div class="progress">
-							<div class="progress-bar color-1" role="progressbar" aria-valuenow="75" aria-valuemin="0"
+							<div class="progress-bar color-1" role="progressbar" aria-valuenow="70" aria-valuemin="0"
 								aria-valuemax="100" style="width:75%">
 								<span class="bar-fill">75%</span>
 							</div>
@@ -228,9 +234,9 @@
 				</div>
 				<div class="col-md-6 animate-box">
 					<div class="progress-wrap ftco-animate">
-						<h3>Firebase</h3>
+						<h3>C,C++</h3>
 						<div class="progress">
-							<div class="progress-bar color-2" role="progressbar" aria-valuenow="60" aria-valuemin="0"
+							<div class="progress-bar color-2" role="progressbar" aria-valuenow="80" aria-valuemin="0"
 								aria-valuemax="100" style="width:60%">
 								<span>60%</span>
 							</div>
@@ -239,7 +245,7 @@
 				</div>
 				<div class="col-md-6 animate-box">
 					<div class="progress-wrap ftco-animate">
-						<h3>Java</h3>
+						<h3>HTML</h3>
 						<div class="progress">
 							<div class="progress-bar color-3" role="progressbar" aria-valuenow="70" aria-valuemin="0"
 								aria-valuemax="100" style="width:70%">
@@ -250,9 +256,9 @@
 				</div>
 				<div class="col-md-6 animate-box">
 					<div class="progress-wrap ftco-animate">
-						<h3>VCS</h3>
+						<h3>CSS</h3>
 						<div class="progress">
-							<div class="progress-bar color-4" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+							<div class="progress-bar color-4" role="progressbar" aria-valuenow="60" aria-valuemin="0"
 								aria-valuemax="100" style="width:70%">
 								<span>70%</span>
 							</div>
@@ -261,9 +267,9 @@
 				</div>
 				<div class="col-md-6 animate-box">
 					<div class="progress-wrap ftco-animate">
-						<h3>Cloud</h3>
+						<h3>MYSQL</h3>
 						<div class="progress">
-							<div class="progress-bar color-6" role="progressbar" aria-valuenow="50" aria-valuemin="0"
+							<div class="progress-bar color-6" role="progressbar" aria-valuenow="80" aria-valuemin="0"
 								aria-valuemax="100" style="width:50%">
 								<span>50%</span>
 							</div>
@@ -272,9 +278,9 @@
 				</div>
 				<div class="col-md-6 animate-box">
 					<div class="progress-wrap ftco-animate">
-						<h3>UI & UX</h3>
+						<h3>Microsoft Office</h3>
 						<div class="progress">
-							<div class="progress-bar color-6" role="progressbar" aria-valuenow="60" aria-valuemin="0"
+							<div class="progress-bar color-6" role="progressbar" aria-valuenow="70" aria-valuemin="0"
 								aria-valuemax="100" style="width:60%">
 								<span>60%</span>
 							</div>
@@ -283,9 +289,9 @@
 				</div>
 				<div class="col-md-6 animate-box">
 					<div class="progress-wrap ftco-animate">
-						<h3>C++</h3>
+						<h3>Data Strctures & Algorithms</h3>
 						<div class="progress ">
-							<div class="progress-bar color-6 " role="progressbar" aria-valuenow="65" aria-valuemin="0"
+							<div class="progress-bar color-6 " role="progressbar" aria-valuenow="85" aria-valuemin="0"
 								aria-valuemax="100" style="width:65%">
 								<span>65%</span>
 							</div>
@@ -297,7 +303,7 @@
 			<div class="row justify-content-center py-5 mt-5">
 				<div class="col-md-12 heading-section text-center ftco-animate">
 					<span class="subheading">What I Do</span>
-					<h2 class="mb-4">Strategy, design and a bit of magic</h2>
+					<h2 class="mb-4">Coding, building & learning...</h2>
 				</div>
 			</div>
 
@@ -310,8 +316,8 @@
 						<div class="desc">
 							<h3 class="mb-5"><a href="#">Exploring</a></h3>
 							<h4 style="color: darkslategray;">Machine Learning</h4>
-							<h4 style="color: darkslategray;">Human Psychology</h4>
-							<h4 style="color: darkslategray;">Vacation destinations</h4>
+							<h4 style="color: darkslategray;">Deep Learning</h4>
+							<h4 style="color: darkslategray;">Artificial Intelligence</h4>
 						</div>
 					</div>
 				</div>
@@ -323,7 +329,7 @@
 						<div class="desc">
 							<h3 class="mb-5"><a href="#">Creating</a></h3>
 							<h4 style="color: darkslategray;">Community Network</h4>
-							<h4 style="color: darkslategray;">Android Apps</h4>
+							<h4 style="color: darkslategray;">Softwares</h4>
 							<h4 style="color: darkslategray;">Websites</h4>
 						</div>
 					</div>
@@ -335,9 +341,9 @@
 						</span>
 						<div class="desc">
 							<h3 class="mb-5"><a href="#">Learning</a></h3>
-							<h4 style="color:darkslategray;">Cloud Support</h4>
-							<h4 style="color: darkslategray;">Design Sprints</h4>
-							<h4 style="color: darkslategray;">AIML</h4>
+							<h4 style="color:darkslategray;">Cloud</h4>
+							<h4 style="color: darkslategray;">Android</h4>
+							<h4 style="color: darkslategray;">Javascript</h4>
 						</div>
 					</div>
 				</div>
@@ -359,13 +365,13 @@
 					</div>
 					<div class="col-md-3 text-center counter-margin">
 						<span class="colorlib-counter-label">Projects</span>
-						<div class="counter" data-count="20" style=" align-content: center;   font-family: Poppins, Arial, sans-serif;
+						<div class="counter" data-count="15" style=" align-content: center;   font-family: Poppins, Arial, sans-serif;
 							">
 							0
 						</div>
 					</div>
 					<div class="col-md-3 text-center counter-margin">
-						<span class="colorlib-counter-label">Events</span>
+						<span class="colorlib-counter-label"></span>
 						<div class="counter" data-count="10" style=" align-content: center;   font-family: Poppins, Arial, sans-serif;
 								">
 							0
@@ -373,7 +379,7 @@
 					</div>
 					<div class="col-md-3 text-center counter-margin ">
 						<span class="colorlib-counter-label">Lines of Code</span>
-						<div class="counter" data-count="30000" style=" align-content: center;   font-family: Poppins, Arial, sans-serif;
+						<div class="counter" data-count="500" style=" align-content: center;   font-family: Poppins, Arial, sans-serif;
 								">
 							0
 						</div>
