--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-	<title>Sonu Sourav</title>
+	<title>Hardeep Kaur</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
@@ -98,8 +98,8 @@
 								<span class="subheading">Hello</span>
 								<h1 class="mb-4 mt-3">
 									I'm
-									<span>Sonu <br />
-										Sourav</span>
+									<span>Hardeep <br />
+										Kaur</span>
 								</h1>
 								<h2 class="mb-4"></h2>
 								<p>
@@ -122,7 +122,7 @@
 						<div class="one-forth d-flex align-items-center ftco-animate"
 							data-scrollax=" properties: { translateY: '70%' }">
 							<div class="text">
-								<h1 class="mb-4 mt-3">I'm an <span>App Developer</span></h1>
+								<h1 class="mb-4 mt-3">I'm an <span>Software Developer</span></h1>
 								<p>
 									<a href="resume.pdf" class="btn-custom">Download CV</a>
 								</p>
