--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 				<div class="container">
 					<div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end"
 						data-scrollax-parent="true">
-						<div class="one-third order-md-last img" style="background-image:url(images/my_pic.png);">
+						<div class="one-third order-md-last img" style="background-image:url(images/black.png);">
 							<div class="overlay"></div>
 						</div>
 						<div class="one-forth d-flex  align-items-center ftco-animate"
@@ -116,7 +116,7 @@
 				<div class="container">
 					<div class="row d-flex no-gutters slider-text align-items-end justify-content-end"
 						data-scrollax-parent="true">
-						<div class="one-third order-md-last img" style="background-image:url(images/bg_cover.jpg);">
+						<div class="one-third order-md-last img" style="background-image:url(images/red.jpg);">
 							<div class="overlay"></div>
 						</div>
 						<div class="one-forth d-flex align-items-center ftco-animate"
