--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 				<div class="container">
 					<div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end"
 						data-scrollax-parent="true">
-						<div class="one-third order-md-last img" style="background-image:url(images/black.png);">
+						<div class="one-third order-md-last img" style="background-image:url(images/bg4.jpg);">
 							<div class="overlay"></div>
 						</div>
 						<div class="one-forth d-flex  align-items-center ftco-animate"
@@ -97,9 +97,9 @@
 								<h2 class="shake">🖐️</h2>
 								<span class="subheading">Hello</span>
 								<h1 class="mb-4 mt-3">
-									I'm
-									<span>Hardeep <br />
-										Kaur</span>
+									I'm<br>
+								    <span>Hardeep <br />
+										Kaur </span>
 								</h1>
 								<h2 class="mb-4"></h2>
 								<p>
@@ -116,13 +116,13 @@
 				<div class="container">
 					<div class="row d-flex no-gutters slider-text align-items-end justify-content-end"
 						data-scrollax-parent="true">
-						<div class="one-third order-md-last img" style="background-image:url(images/red.jpg);">
+						<div class="one-third order-md-last img" style="background-image:url(images/bg3.jpg);">
 							<div class="overlay"></div>
 						</div>
 						<div class="one-forth d-flex align-items-center ftco-animate"
 							data-scrollax=" properties: { translateY: '70%' }">
 							<div class="text">
-								<h1 class="mb-4 mt-3">I'm an <span>Software Developer</span></h1>
+								<h1 class="mb-4 mt-3">I'm an <br> <span>Software Developer</span></h1>
 								<p>
 									<a href="resume.pdf" class="btn-custom">Download CV</a>
 								</p>
