--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 						<div class="one-forth d-flex align-items-center ftco-animate"
 							data-scrollax=" properties: { translateY: '70%' }">
 							<div class="text">
-								<h1 class="mb-4 mt-3">I'm an <br> <span>Software Developer</span></h1>
+								<h1 class="mb-4 mt-3">I'm a <br> <span>Software Developer</span></h1>
 								<p>
 									<a href="resume.pdf" class="btn-custom">Download CV</a>
 								</p>
