--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 								</h1>
 								<h2 class="mb-4"></h2>
 								<p>
-									<a href="resume.pdf" class="btn-custom">Download CV</a>
+									<a href="Resume.pdf" class="btn-custom">Download CV</a>
 								</p>
 							</div>
 						</div>
