--- a/index.html
+++ b/index.html
@@ -375,9 +375,7 @@
 				<div class="col-md-12 heading-section text-center ftco-animate">
 					<span class="subheading">Timeline</span>
                     <h2 class="mb-4">Training & Work Experience</h2>
-                    <p>
-						All my academic and personal projects are summed up here:
-					</p>
+                
 				</div>
 			</div>
 			<body>
@@ -385,7 +383,7 @@
                     <!-- cd-timeline-block -->
                     <div class="cd-timeline-block">
                         <div class="cd-timeline-img cd-black">
-                            <img src="images/py.png" style="padding-top: 10px;" alt="Matic Network" />
+                            <img src="images/build.png" style="padding-top: 10px;" alt="Matic Network" />
                         </div>
 						<div class="cd-timeline-content" style="background-color: #f1f5f8">
 							<b> <strong></strong> Position :</strong></b>
@@ -412,7 +410,7 @@
 					<!-- cd-timeline-block -->
 					<div class="cd-timeline-block" >
 						<div class="cd-timeline-img cd-black">
-							<img src="images/java.png" alt="Inter-IIT Tech Meet 8.0" />
+							<img src="images/build.png" alt="Inter-IIT Tech Meet 8.0" />
 						</div>
 						<div class="cd-timeline-content" style="background-color: #f1f5f8">
 							<b> <strong></strong> Position :</strong></b>
