--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 							<div class="text">
 								<h1 class="mb-4 mt-3">I'm a <br> <span>Software Developer</span></h1>
 								<p>
-									<a href="resume.pdf" class="btn-custom">Download CV</a>
+									<a href="Resume.pdf" class="btn-custom">Download CV</a>
 								</p>
 							</div>
 						</div>
