--- a/index.html
+++ b/index.html
@@ -666,16 +666,16 @@
 						<div class="block-23 mb-3">
 							<ul>
 								<li>
-									<span class="icon icon-map-marker"></span><span class="text">
-                                        Bhilai, Chattisgarh (490023) </span>
+									</span><span class="text">
+                                       ❤️   Bhilai, Chattisgarh (490023) </span>
 								</li>
 								<li>
-									<a href="https://www.skype.com/en/"><span class="icon icon-phone"></span><span
-                                        class="text">+91 9407797630 <br>+91 9752083332</span></a>
+									<a href="https://www.skype.com/en/"> <span
+                                        class="text"> ❤️   +91 9407797630 <br>  ❤️   +91 9752083332</span></a>
 								</li>
 								<li>
-									<a href="https://www.skype.com/en/"><span class="icon icon-skype"></span><span
-                                        class="text">hardeepkaur.0598</span></a>
+									<a href="https://www.skype.com/en/"><span
+                                        class="text">❤️  Skype:  hardeepkaur.0598</span></a>
 								</li>
 							</ul>
 						</div>
