--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
                                        ❤️   Bhilai, Chattisgarh (490023) </span>
 								</li>
 								<li>
-									<a href="https://www.skype.com/en/"> <span
+								 <span
                                         class="text"> ❤️   +91 9407797630 <br>  ❤️   +91 9752083332</span></a>
 								</li>
 								<li>
