--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 				<div class="container">
 					<div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end"
 						data-scrollax-parent="true">
-						<div class="one-third order-md-last img" style="background-image:url(images/bg4.jpg);">
+						<div class="one-third order-md-last img" style="background-image:url(images/black.jpg);">
 							<div class="overlay"></div>
 						</div>
 						<div class="one-forth d-flex  align-items-center ftco-animate"
