--- a/index.html
+++ b/index.html
@@ -131,9 +131,7 @@
 			<div class="row d-flex">
 				<div class="col-md-6 col-lg-5 d-flex">
 					<div class="img-about img d-flex align-items-stretch">
-						<div class="overlay"></div>
-						<div class="img d-flex align-self-stretch align-items-center"
-							style="background-image:url(images/hardeep.jpg);"></div>
+						<img class="d-flex align-self-stretch align-items-center" src="images/hardeep.jpg" alt="">
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-7 pl-lg-5 py-5">
@@ -276,7 +274,6 @@
 					<div class="row d-flex">
 						<div class="col-md-6 col-lg-5 d-flex">
 							<div class="img-about img d-flex align-items-stretch">
-								<div class="overlay"></div>
 								<div class="img d-flex align-self-stretch align-items-center"
 								style="background-image:url(images/bg7.jpg);"></div>
 							</div>
