--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
 						<b style="color: rgb(233, 7, 7)">HashedIn by Deloitte </b> <br>
 	
 					 </h6_black>
-							
+							March 2021
 							
 						<h5 class="cd-date">March, 2021</h5>
 						<br>
