--- a/index.html
+++ b/index.html
@@ -557,8 +557,8 @@
 							<h6_black> • Built GUI Java Application for visualizing path finding algorithm (Dijkstra Algorithm
 and A* Search Algorithm) and maze-generation algorithm. <br> <br>
 • Designed interactive functionalities such as :
-								<br> • density bar(to generate map with
-specified density) <br> • size bar(to change the size of the map) <br> • delay bar(to delay the
+								<br> * density bar(to generate map with
+specified density) <br> * size bar(to change the size of the map) <br> * delay bar(to delay the
 process of searching).
 <br> <br>
 								<b> <strong></strong> Platform :</strong></b>
@@ -590,7 +590,7 @@ process of searching).
                             </h6_black>
                             <br>
                             
-							<h5 class="cd-date">( October 2020 - Present )</h5>
+							<h5 class="cd-date">( Oct 2020 - Dec 2020 )</h5>
 						</div>
 					</div>
 
@@ -610,7 +610,7 @@ process of searching).
 								
                             </h6_black>
                             <br>
-							<h5 class="cd-date">( October 2020 - Present )</h5>
+							<h5 class="cd-date">( Feb 2020 - March 2020 )</h5>
 						</div>
 					</div>
 
@@ -626,7 +626,7 @@ process of searching).
 								added an ackinator for analysing the user’s symptoms of COVID-19.<br>
 								 <br><b> <strong></strong> Platform :</strong></b>
                                 <b style="color: rgb(233, 7, 7)">Netbeans IDE </b>  </h6_black>
-                            <h5 class="cd-date">( August 2020 )</h5>
+                            <h5 class="cd-date">( March 2020 - April 2020 )</h5>
                             <br>
                             <a href="https://github.com/hardeep0598/COVID-19_Tracker" 
                             target="_blank" class="cd-read-more"><b style="color: rgb(7, 0, 10)">see project</b>
@@ -678,7 +678,7 @@ process of searching).
                             <a href="https://github.com/hardeep0598/Sudoku_solver"
 							target="_blank" class="cd-read-more"><b style="color: rgb(7, 0, 10)">see project</b>
 						</a>
-							<h5 class="cd-date">June 2020</h5>
+							<h5 class="cd-date">( Jan 2020 - March 2020 ) </h5>
 						</div>
 					</div>
 					<!-- cd-timeline-block -->
@@ -723,7 +723,7 @@ process of searching).
                                 <a href="https://github.com/hardeep0598/Hangman"
                                 target="_blank" class="cd-read-more"><b style="color: rgb(7, 0, 10)">see project</b>
 							</a>
-								<h5 class="cd-date">January, 2020</h5>
+								<h5 class="cd-date">Dec 2019</h5>
 							</div>
 						</div>
 	
@@ -744,7 +744,7 @@ process of searching).
 								  Mathematics (mat) and Portuguese language (por). 
 							<h6_black>
 								<br>
-								<b> <strong></strong> Platform :</strong></b>
+								<b> <strong></strong> Platform :</strong></b> <br>
                                 <b style="color: rgb(233, 7, 7)">Jupyter Notebook </b>  </h6_black>
                               </h6_black>
                                 <a href="https://github.com/hardeep0598/Student_Performance_Classification"
