--- a/index.html
+++ b/index.html
@@ -557,8 +557,8 @@
 							<h6_black> • Built GUI Java Application for visualizing path finding algorithm (Dijkstra Algorithm
 and A* Search Algorithm) and maze-generation algorithm. <br> <br>
 • Designed interactive functionalities such as :
-								<br> * density bar(to generate map with
-specified density) <br> * size bar(to change the size of the map) <br> * delay bar(to delay the
+					<br>			density bar(to generate map with
+specified density) <br> size bar(to change the size of the map) <br> delay bar(to delay the
 process of searching).
 <br> <br>
 								<b> <strong></strong> Platform :</strong></b>
@@ -622,7 +622,7 @@ process of searching).
                         <div class="cd-timeline-content" style="background-color: #f1f5f8">
                             <h6_black style="color: rgba(111, 4, 250, 0.884)"><b>COVID-19 TRACKER</b></h6_black>
                             <h6_black>Developed a Java Software using web-scraping
-								with <b>JSOUP</b>in Spring Framework to keep track of count of COVID-cases all over the world & also
+								with <b>JSOUP</b> in Spring Framework to keep track of count of COVID-cases all over the world & also
 								added an ackinator for analysing the user’s symptoms of COVID-19.<br>
 								 <br><b> <strong></strong> Platform :</strong></b>
                                 <b style="color: rgb(233, 7, 7)">Netbeans IDE </b>  </h6_black>
@@ -731,7 +731,7 @@ process of searching).
 					<!-- cd-timeline-block -->
 					<div class="cd-timeline-block" >
 						<div class="cd-timeline-img cd-yellow">
-							<img src="images/ml.png" alt="Picture" />
+							<img src="images/ml.jpg" alt="Picture" />
 						</div>
 						<div class="cd-timeline-content" style="background-color: #f1f5f8">
 							<h6_black style="color: rgba(111, 4, 250, 0.884)"> 
