--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
 				 <!-- cd-timeline-block -->
 				 <div class="cd-timeline-block">
 					<div class="cd-timeline-img cd-black">
-						<img src="images/hashedin.png" style="padding-top: 10px;" alt="Matic Network" />
+						<img src="hashedin.png" style="padding-top: 10px;" alt="Matic Network" />
 					</div>
 					<div class="cd-timeline-content" style="background-color: #f1f5f8">
 		
@@ -731,7 +731,7 @@ process of searching).
 					<!-- cd-timeline-block -->
 					<div class="cd-timeline-block" >
 						<div class="cd-timeline-img cd-yellow">
-							<img src="images/ml.jpg" alt="Picture" />
+							<img src="ml.jpg" alt="Picture" />
 						</div>
 						<div class="cd-timeline-content" style="background-color: #f1f5f8">
 							<h6_black style="color: rgba(111, 4, 250, 0.884)"> 
