--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
 				 <!-- cd-timeline-block -->
 				 <div class="cd-timeline-block">
 					<div class="cd-timeline-img cd-black">
-						<img src="hi.png" style="padding-top: 10px;" alt="Matic Network" />
+						<img src="images/hi.png" style="padding-top: 10px;" alt="Matic Network" />
 					</div>
 					<div class="cd-timeline-content" style="background-color: #f1f5f8">
 		
