--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
 				 <!-- cd-timeline-block -->
 				 <div class="cd-timeline-block">
 					<div class="cd-timeline-img cd-black">
-						<img src="images/hi.png" style="padding-top: 10px;" alt="Matic Network" />
+						<img src="images/hi.jpg"  alt="hashedin by deloitte" />
 					</div>
 					<div class="cd-timeline-content" style="background-color: #f1f5f8">
 		
@@ -417,7 +417,7 @@
 				
 				<div class="cd-timeline-block" >
 					<div class="cd-timeline-img cd-black">
-						<img src="images/microsoft.png"  alt="Inter-IIT Tech Meet 8.0" />
+						<img src="images/microsoft.png"  alt="microsoft" />
 					</div>
 					<div class="cd-timeline-content" style="background-color: #f1f5f8">
 						<b style="color: rgb(233, 7, 7)">Microsoft Learn Student Ambassador  </b> <br>
@@ -438,7 +438,7 @@
 				 <!-- cd-timeline-block -->
 				 <div class="cd-timeline-block">
 					<div class="cd-timeline-img cd-black">
-						<img src="girlscript.jpg" style="padding-top: 10px;" alt="Matic Network" />
+						<img src="girlscript.jpg" style="padding-top: 10px;" alt="girlscript" />
 					</div>
 					<div class="cd-timeline-content" style="background-color: #f1f5f8">
 		
@@ -469,7 +469,7 @@
 				<!-- cd-timeline-block -->
 				<div class="cd-timeline-block">
 					<div class="cd-timeline-img cd-black">
-						<img src="images/cb.jpg" style="padding-top: 10px;" alt="Matic Network" />
+						<img src="images/cb.jpg" style="padding-top: 10px;" alt="coding blocks" />
 					</div>
 					<div class="cd-timeline-content" style="background-color: #f1f5f8">
 						<h6_black style="color: rgba(111, 4, 250, 0.884)"><b>Campus Ambassador</b></h6_black>
@@ -495,7 +495,7 @@
                     <!-- cd-timeline-block -->
                     <div class="cd-timeline-block">
                         <div class="cd-timeline-img cd-black">
-                            <img src="images/aisect.png" style="padding-top: 20px;" alt="Matic Network" />
+                            <img src="images/aisect.png" style="padding-top: 20px;" alt="bds" />
                         </div>
 						<div class="cd-timeline-content" style="background-color: #f1f5f8">
 							<b> <strong></strong> Position :</strong></b>
