--- a/index.html
+++ b/index.html
@@ -141,14 +141,13 @@
 								About Me
 							</h2>
 							<p>
-                                I am a third year undergraduate at the Rungta College of Engineering & Technology,
+                                I am a final year undergraduate at the Rungta College of Engineering & Technology,
                                 pursuing my Bachelors in Computer Science and Engineering.
                              As a student of Computer Science, I am fascinated by the extensive impact 
                              computers can have in solving real world problems.
-                              I am specially interested in the fields of software development and data science.
+                              I'm more into programming & cloud computing.
                              Among my other interests, I am fascinated by 
-                             Astronomy as well as Mythology,
-                               sketching & Dancing.
+                             Astronomy & very much interested in Astrophysics & Cosmic Universe.
 
 							</p>
 							<span class="subheading">Life Philosophy</span>
