--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                 <li><a href="https://twitter.com/__Hardeepkaur__">
                                         <ion-icon name="logo-twitter"></ion-icon>
                                     </a></li>
-                                <li><a href="https://www.instagram.com/__hardeep_kaur__/">
+                                <li><a href="https://www.instagram.com/rgdoingthings/">
                                     <ion-icon name="logo-instagram"></ion-icon>
                                     </a></li>
                                 <li><a href="https://hardeep-kaur.medium.com/">
@@ -613,7 +613,7 @@
                                     <li><a href="https://twitter.com/__Hardeepkaur__">
                                             <ion-icon name="logo-twitter"></ion-icon>
                                         </a></li>
-                                    <li><a href="https://www.instagram.com/__hardeep_kaur__/">
+                                    <li><a href="https://www.instagram.com/rgdoingthings/">
                                         <ion-icon name="logo-instagram"></ion-icon>
                                         </a></li>
                                     <li><a href="https://hardeep-kaur.medium.com/">
