--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
                                     <p>2017 - 2021</p>
                                 </div>
                                 <div>
-                                    <li>Received 1 in 550 rare Community Hero badger from Microsoft for organising meetups, conferences, sharing content and being an active member of the community.</li>
+                                    <li>Received a scholarship by SAIL for 4 years of undergraduate studies.</li>
                                 </div>
                             </div>
 							
