--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                 <li><a href="https://twitter.com/__Hardeepkaur__">
                                         <ion-icon name="logo-twitter"></ion-icon>
                                     </a></li>
-                                <li><a href="https://www.instagram.com/rgdoingthings/">
+                                <li><a href="https://www.instagram.com/icosmoetic/">
                                     <ion-icon name="logo-instagram"></ion-icon>
                                     </a></li>
                                 <li><a href="https://hardeep-kaur.medium.com/">
@@ -297,7 +297,7 @@
 
                             <div class="py-4">
                                 <div class="desc">
-                                    <h4>Software Engineer Intern</h4>
+                                    <h4>Software Engineer</h4>
                                     <p><a href="https://hashedin.com/">HashedIn by Deloitte</a></p>
                                 </div>
                                 <div>
@@ -403,7 +403,7 @@
                                     <p><a href="https://studentambassadors.microsoft.com/en-us">Microsoft</a></p>
                                 </div>
                                 <div>
-                                    <p>September 2019 - Present</p>
+                                    <p>September 2019 - December 2021</p>
                                 </div>
                                 <div>
                                     <li>Part of a global group of campus leaders.</li>
