--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         </div>
 			    <div class="col-md-6 mt-3">
                             <div class="progress-wrap">
-                                <h4>C/C++, Java</h4>
+                                <h4>Spring</h4>
                                 <div class="progress progress-style">
                                     <div class="progress-bar color-1" role="progressbar" aria-valuenow="85"
                                         aria-valuemin="0" aria-valuemax="100" style="width:90%">
@@ -105,10 +105,10 @@
          
                         <div class="col-md-6 mt-3">
                             <div class="progress-wrap">
-                                <h4>HTML + CSS</h4>
+                                <h4>Javascript</h4>
                                 <div class="progress progress-style">
                                     <div class="progress-bar color-1" role="progressbar" aria-valuenow="60"
-                                        aria-valuemin="0" aria-valuemax="100" style="width:75%">
+                                        aria-valuemin="0" aria-valuemax="100" style="width:60%">
                                     </div>
                                 </div>
                             </div>
@@ -125,10 +125,10 @@
                         </div>
                         <div class="col-md-6 mt-3">
                             <div class="progress-wrap">
-                                <h4>Back End</h4>
+                                <h4>Node.js</h4>
                                 <div class="progress progress-style">
                                     <div class="progress-bar color-1" role="progressbar" aria-valuenow="85"
-                                        aria-valuemin="0" aria-valuemax="100" style="width:80%">
+                                        aria-valuemin="0" aria-valuemax="100" style="width:60%">
                                     </div>
                                 </div>
                             </div>
