--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </div>
                 <div class="col-lg-4 text-center my-auto pb-5 rounded-circle">
 					<img class="img-fluid rounded-circle"
-                        src="./images/hardeep.jpg"></div>
+                        src="./images/Screenshot_20220407-122211_Instagram.jpg"></div>
             </div>
         </section>
 
