--- a/index.html
+++ b/index.html
@@ -52,9 +52,13 @@
                         <h1 class="bold-text">About</h1>
                         <div class="pt-5">
                             <h2 class="mb-5">Hello!</h2>
-                            <p>My name is Hardeep. I'm a cloud computing enthusiast & a learner.📕 
-								 I'm deeply passionate about software development & innovations.
-								 I believe in the power of community & have been also a part of few amazing communities.
+                            <p>
+				    People call me Hardeep. I am an astrophile, vegetarian, and an experimental chef. Well, I would like to experiment as much as I can, on food and my life. My body is made up of Java, which is literally me! This defines me as a Back-end Developer (Back End, Middleware, Whatever...).
+Oh yeah, I love sketching, watching stars, surfing the internet & exploring yoga aasans..
+
+
+
+								
                             </p>
 
                             <ul class="social-links list-unstyled mt-4">
@@ -70,7 +74,7 @@
                                 <li><a href="https://www.facebook.com/hardeepkaur0598">
                                     <ion-icon name="logo-facebook"></ion-icon>
                                 </a></li>
-                                <li><a href="https://twitter.com/__Hardeepkaur__">
+                                <li><a href="https://twitter.com/icosmoetic">
                                         <ion-icon name="logo-twitter"></ion-icon>
                                     </a></li>
                                 <li><a href="https://www.instagram.com/icosmoetic/">
