--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                         <div class="pt-5">
                             <h2 class="mb-5">Hello!</h2>
                             <p>
-				    People call me Hardeep. I am an astrophile, vegetarian, and an experimental chef. Well, I would like to experiment as much as I can, on food and my life. My body is made up of Java, which is literally me! This defines me as a Back-end Developer (Back End, Middleware, Whatever...).
-Oh yeah, I love sketching, watching stars, surfing the internet & exploring yoga aasans..
+				 ⭐  People call me Hardeep. I am an astrophile, vegetarian, and an experimental chef. Well, I would like to experiment as much as I can, on food and my life. My body is made up of Java, which is literally me! This defines me as a Back-end Developer (Back End, Middleware, Whatever...).
+Oh yeah, I love sketching, watching stars, surfing the internet & exploring yoga aasans.. ⭐ 
 
 
 
